build(gateway): enact API Gateway security and resilience audit mitigations
- Update spring-cloud version to 2024.0.0
- Refactor gateway SecurityConfig to secure CORS origins and modernize syntaxes
- Refactor RateLimitConfig to extract Principal instead of raw proxy IPs
- Adapt FallbackController to strictly intercept GETs, returning JSON shapes with Retry-After headers
- Centralize trace correlation via new Spring Cloud CorrelationIdFilter
- Transition gateway routing definitions from load-balancer resolution to direct parameterization with HTTP timeouts
- Log Day 11 audit modifications into planning documentation